firmware/tier1_inference/build/log/idf_py_stdout_output_11328
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\dissertation\firmware\tier1_inference\build\bootloader\esp-idf\esptool_py && C:\Users\Hp\.espressif\python_env\idf5.5_py3.10_env\Scripts\python.exe C:/esp/v5.5.4/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/dissertation/firmware/tier1_inference/build/bootloader/bootloader.bin"
Bootloader binary size 0x57c0 bytes. 0x2840 bytes (31%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/tier1_inference.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/tier1_inference.cpp.obj 
ccache C:\Users\Hp\.espressif\tools\riscv32-esp-elf\esp-14.2.0_20260121\riscv32-esp-elf\bin\riscv32-esp-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/dissertation/firmware/tier1_inference/build/config -ID:/dissertation/firmware/tier1_inference/main -IC:/esp/v5.5.4/esp-idf/components/newlib/platform_include -IC:/esp/v5.5.4/esp-idf/components/freertos/config/include -IC:/esp/v5.5.4/esp-idf/components/freertos/config/include/freertos -IC:/esp/v5.5.4/esp-idf/components/freertos/config/riscv/include -IC:/esp/v5.5.4/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v5.5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/esp/v5.5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/esp/v5.5.4/esp-idf/components/freertos/esp_additions/include -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/include -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/include/soc/esp32c6 -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/dma/include -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/port/esp32c6/. -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/port/esp32c6/include -IC:/esp/v5.5.4/esp-idf/components/esp_hw_support/port/esp32c6/private_include -IC:/esp/v5.5.4/esp-idf/components/heap/include -IC:/esp/v5.5.4/esp-idf/components/heap/tlsf -IC:/esp/v5.5.4/esp-idf/components/log/include -IC:/esp/v5.5.4/esp-idf/components/soc/include -IC:/esp/v5.5.4/esp-idf/components/soc/esp32c6 -IC:/esp/v5.5.4/esp-idf/components/soc/esp32c6/include -IC:/esp/v5.5.4/esp-idf/components/soc/esp32c6/register -IC:/esp/v5.5.4/esp-idf/components/hal/platform_port/include -IC:/esp/v5.5.4/esp-idf/components/hal/esp32c6/include -IC:/esp/v5.5.4/esp-idf/components/hal/include -IC:/esp/v5.5.4/esp-idf/components/esp_rom/include -IC:/esp/v5.5.4/esp-idf/components/esp_rom/esp32c6/include -IC:/esp/v5.5.4/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -IC:/esp/v5.5.4/esp-idf/components/esp_rom/esp32c6 -IC:/esp/v5.5.4/esp-idf/components/esp_common/include -IC:/esp/v5.5.4/esp-idf/components/esp_system/include -IC:/esp/v5.5.4/esp-idf/components/esp_system/port/soc -IC:/esp/v5.5.4/esp-idf/components/esp_system/port/include/riscv -IC:/esp/v5.5.4/esp-idf/components/esp_system/port/include/private -IC:/esp/v5.5.4/esp-idf/components/riscv/include -IC:/esp/v5.5.4/esp-idf/components/lwip/include -IC:/esp/v5.5.4/esp-idf/components/lwip/include/apps -IC:/esp/v5.5.4/esp-idf/components/lwip/include/apps/sntp -IC:/esp/v5.5.4/esp-idf/components/lwip/lwip/src/include -IC:/esp/v5.5.4/esp-idf/components/lwip/port/include -IC:/esp/v5.5.4/esp-idf/components/lwip/port/freertos/include -IC:/esp/v5.5.4/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v5.5.4/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v5.5.4/esp-idf/components/lwip/port/esp32xx/include/sys -ID:/dissertation/firmware/tier1_inference/managed_components/espressif__esp-tflite-micro -ID:/dissertation/firmware/tier1_inference/managed_components/espressif__esp-tflite-micro/third_party/gemmlowp -ID:/dissertation/firmware/tier1_inference/managed_components/espressif__esp-tflite-micro/third_party/flatbuffers/include -ID:/dissertation/firmware/tier1_inference/managed_components/espressif__esp-tflite-micro/third_party/ruy -ID:/dissertation/firmware/tier1_inference/managed_components/espressif__esp-tflite-micro/third_party/kissfft -IC:/esp/v5.5.4/esp-idf/components/esp_timer/include @"D:/dissertation/firmware/tier1_inference/build/toolchain/cxxflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/dissertation/firmware/tier1_inference=. -fmacro-prefix-map=C:/esp/v5.5.4/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fuse-cxa-atexit -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/tier1_inference.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\tier1_inference.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/tier1_inference.cpp.obj -c D:/dissertation/firmware/tier1_inference/main/tier1_inference.cpp
D:/dissertation/firmware/tier1_inference/main/tier1_inference.cpp: In function 'void app_main()':
D:/dissertation/firmware/tier1_inference/main/tier1_inference.cpp:49:18: error: 'class tflite::MicroMutableOpResolver<10>' has no member named 'AddTile'; did you mean 'AddFill'?
   49 |     if (resolver.AddTile()          != kTfLiteOk) { ESP_LOGE(TAG, "Resolver: Tile");          return; }
      |                  ^~~~~~~
      |                  AddFill
D:/dissertation/firmware/tier1_inference/main/tier1_inference.cpp:113:2: error: expected '}' at end of input
  113 | }
      |  ^
D:/dissertation/firmware/tier1_inference/main/tier1_inference.cpp:25:1: note: to match this '{'
   25 | {
      | ^
ninja: build stopped: subcommand failed.
